# deep-learning-fault-diagnosis

./: .gitignore  LICENSE  README.md  pyproject.toml  test.ipynb  train.py
src/: config.py  data_module.py  dataset_manager.py  hf_transforms.py  lightning_module.py  model.py
